--- a/kustomize/patch/shared-charts/kustomization.yaml
+++ b/kustomize/patch/shared-charts/kustomization.yaml
@@ -1,9 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namePrefix: emissary-ingress-
+namePrefix: shared-charts-
 commonLabels:
-  kind: emissary-ingress
+  kind: shared-charts
 
 bases:
   - ../../base
