--- a/kustomize/base/resources/deployment.yaml
+++ b/kustomize/base/resources/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: helm-indexer
-  namespace: helm-infra
+  namespace: helm-production
   labels:
     app: helm-indexer
 spec:
